--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "dev": "next dev --port 1996",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint . --max-warnings=0"
   },
   "dependencies": {
-    "next": "14.2.5",
+    "next": "16.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-icons": "^4.12.0"
@@ -19,8 +19,8 @@
     "@types/react": "18.2.66",
     "@types/react-dom": "18.2.22",
     "autoprefixer": "10.4.19",
-    "eslint": "8.57.0",
-    "eslint-config-next": "14.2.5",
+    "eslint": "^9.39.1",
+    "eslint-config-next": "^16.0.1",
     "postcss": "8.4.38",
     "tailwindcss": "3.4.4",
     "typescript": "5.4.5"
