--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint . --max-warnings=0"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^4.3.1",
     "next": "16.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
