--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-pdf/renderer": "^4.3.1",
+    "xlsx": "^0.18.5",
     "next": "16.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
